src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_59.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
	
    <DockPanel.Resources>
            <Style>
				<Button>
					<Button.Background>
						<SolidColorBrush Color="Green" />
					</Button.Background>
					<SolidColorBrush />
				</Button>
	    </Style>
    </DockPanel.Resources>
	
    <Button />
</DockPanel> 
</Page>
